--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
         <p>
           Both inside and outside of work my true passion is learning. 
         </p>      
-        <p>I'm a Cyber Security Engineer who's passionate about Cyber, Software Development and the overlap between the two. With my current employer, The Aerospace Corporation, I've developed a number of cyber-related prototypes, from an automated red-team workbench, to a passive vulnerability scanner for fragile systems.        
+        <p>I'm a Cyber Security Engineer who's passionate about Cyber, Software Development, and the overlap between the two. With my current employer, The Aerospace Corporation, I've developed a number of cyber-related prototypes, from an automated red-team workbench, to a passive vulnerability scanner for fragile systems.        
         </p>
         <p>
           Outside of work, I've just started delving into Golang and WebAssembly.
